// Vitest Snapshot v1

exports[`ExchangeCard > should render 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="css-cqna23"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center space-y-3 md:flex-row md:space-x-3 md:space-y-0"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-lg font-semibold link"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`ExchangeCard > should render when the exchange is not active 1`] = `
<div>
  <div
    data-testid="ExchangeCard--changenow"
  >
    <div>
      <button
        class="css-cqna23"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col items-center space-y-3 md:flex-row md:space-x-3 md:space-y-0"
        >
          <div
            class="h-11 w-11 shrink-0 overflow-hidden rounded-lg"
          >
            <img
              alt="ChangeNOW Logo"
              class="h-full w-full object-cover"
              src="https://exchanges.arkvault.io/images/changenow/thumbnail.png"
            />
          </div>
          <div
            class="flex flex-col truncate"
          >
            <div
              class="truncate text-lg font-semibold text-theme-primary-100 dark:text-theme-secondary-800"
            >
              ChangeNOW
            </div>
          </div>
        </div>
        <div
          class="absolute -top-1 -right-1 m-4 flex items-center space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;
